--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "obsidian-rollover-daily-todos",
-  "version": "0.9.7",
-  "description": "This plugin rolls over incomplete TODOs to the next daily note for Obsidian (https://obsidian.md)",
+  "version": "1.1.0",
+  "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matthew Sessions",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1"
+  },
+  "dependencies": {
+    "obsidian-daily-notes-interface": "^0.9.2"
   }
 }
