--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js"
+    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "deployLocally": "rollup --config rollup.config.js --environment BUILD:production && cp main.js ../../../../My_Obsidian/.obsidian/plugins/obsidian-rollover-daily-todos/main.js"
   },
   "keywords": [],
   "author": "Matthew Sessions",
