--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "obsidian-rollover-daily-todos",
-  "version": "1.1.0",
+  "version": "1.0.4",
   "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production",
-    "deployLocally": "rollup --config rollup.config.js --environment BUILD:production && cp main.js ../../../../My_Obsidian/.obsidian/plugins/obsidian-rollover-daily-todos/main.js"
+    "build": "rollup --config rollup.config.js --environment BUILD:production"
   },
   "keywords": [],
   "author": "Matthew Sessions",
