Add initial unit tests for simple unhappy paths

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "jest": "^29.2.2",
+    "moment": "^2.29.4",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1"
   },
