--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production"
+    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "Matthew Sessions",
@@ -14,7 +15,8 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
-    "rollup": "^2.32.1"
+    "rollup": "^2.32.1",
+    "vitest": "^0.25.7"
   },
   "dependencies": {
     "obsidian-daily-notes-interface": "^0.9.2"
