--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c --environment BUILD:production",
+    "dev": "node esbuild.config.mjs watch",
+    "prebuild": "pnpm i && pnpm clean",
+    "clean": "rimraf main.js data.json",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "build:dev": "node esbuild.config.mjs",
     "test": "vitest",
     "format": "prettier --write ."
   },
@@ -13,14 +16,15 @@
   "author": "Matthew Sessions",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
-    "rollup": "^2.32.1",
-    "vitest": "^0.25.7",
-    "prettier": "^2.8.1"
-  },
-  "dependencies": {
-    "obsidian-daily-notes-interface": "^0.9.2"
+    "@codemirror/state": "^6.0.0",
+    "@codemirror/view": "^6.0.0",
+    "builtin-modules": "^3.3.0",
+    "esbuild": "0.14.47",
+    "obsidian": "latest",
+    "prettier": "^2.8.1",
+    "rimraf": "^3.0.2",
+    "tslib": "^2.4.1",
+    "vite": "^4.0.3",
+    "vitest": "^0.25.7"
   }
 }
