--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "obsidian": "latest",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "tslib": "^2.4.1",
+    "typescript": "^4.9.5",
+    "tslib": "^2.5.0",
     "vite": "^4.0.3",
     "vitest": "^0.25.7"
   }
