--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           version: 6.0.2
           run_install: true
-      - name: Build
-        run: pnpm build
+      - name: Build and Test
+      - run: pnpm build
+      - run: pnpm run test-ci
