--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "build:dev": "node esbuild.config.mjs",
     "test": "vitest",
+    "test-ci": "vitest run",
     "format": "prettier --write ."
   },
   "keywords": [],
