--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,5 +14,4 @@ jobs:
           version: 6.0.2
           run_install: true
       - name: Build and Test
-      - run: pnpm build
-      - run: pnpm run test-ci
+        run: pnpm ci
