Replace rollup with esbuild and hotreload.
Update git ignore.

Use esbuild and hot reload and fix moment typing

Allow env to override and build direct to any vault

Use ubiquitous const to avoid bug.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,31 @@ data.json
 
 # local developer scripts
 deployLocally.js
+
+# Intellij
+*.iml
+.idea
+
+# npm
+node_modules
+package-lock.json
+
+# build
+main.js
+*.js.map
+
+# obsidian dev files
+data.json
+
+# macOS
+.DS_Store
+
+# local developer scripts
+deployLocally.js
+
+dist/
+.hotreload
+.env
+.vscode
+.in
+.out
