--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "id": "obsidian-rollover-daily-todos",
-    "name": "Rollover Daily Todos",
+    "id": "mario-obsidian-rollover-daily-todos",
+    "name": "_mario-Rollover Daily Todos",
     "version": "1.1.7",
     "minAppVersion": "0.12.12",
     "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md). (Originally created by Matthew Sessions)",
