--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "obsidian-rollover-daily-todos",
-  "name": "Rollover Daily Todos",
+  "id": "rollover-daily-todos",
+  "name": "Rollover Daily Todos (fork)",
   "version": "1.1.8",
   "minAppVersion": "0.12.12",
-  "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md). (Originally created by Matthew Sessions)",
-  "author": "Lukas Mölschl",
-  "authorUrl": "https://moelschl.com",
+  "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. This version allows users to specify which statuses count as done. (https://obsidian.md). (Originally created by Matthew Sessions)",
+  "author": "Erika Rice Scherpelz",
+  "authorUrl": "http://github.com/erikaRS",
   "isDesktopOnly": false
 }
