--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obsidian-rollover-daily-todos",
+  "name": "rollover-daily-todos",
   "version": "1.1.8",
   "description": "This Obsidian.md plugin rolls over incomplete TODOs from the previous daily note to today's daily note. (https://obsidian.md)",
   "main": "main.js",
