--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "author": "Lukas Mölschl",
   "license": "MIT",
   "devDependencies": {
+    "@jridgewell/sourcemap-codec": "^1.5.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "glob": "^11.0.2",
+    "lru-cache": "^11.1.0",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "prettier": "^2.8.1",
     "rollup": "^2.32.1",
-    "vitest": "^0.25.7",
-    "prettier": "^2.8.1"
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "obsidian-daily-notes-interface": "^0.9.2"
